# causal-uplift-targeting

./: .gitignore  README.md  check_latest_versions.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default_config.yaml  schema.py
core/: data_split.py
data_sim/: ground_truth.py  pilot_simulator.py
db/: connection.py  schema.sql  seed.py
tests/: test_config_schema.py  test_data_split.py  test_db_connection.py  test_pilot_simulator.py
